--- a/tests/html/webvr/vr-controllers.html
+++ b/tests/html/webvr/vr-controllers.html
@@ -348,7 +348,12 @@ found in the LICENSE file.
         }
       }
 
+      var last = 0;
       function onAnimationFrame (t) {
+        var fps = t - last;
+				last = t;
+				console.log(fps);
+        //console.log("raf" + t);
         stats.begin();
 
         gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
